[workspace]
members = ["wke-main", "wke-sys"]

[package]
name = "wke"
version = "0.1.0"
edition = "2021"

[dev-dependencies.wke-sys]
path = "wke-sys"
version = "^0.1.0"
features = ["enable_report"]

[dev-dependencies]
ctor = "0.2.8"

[dependencies.wke-sys]
path = "wke-sys"
version = "0.1.0"

[dependencies.wke-main]
path = "wke-main"
version = "0.1.0"

[dependencies]
lazy_static = "1.5.0"
tokio = { version = "^1.40", features = ["full"] }
log = { version = "^0.4" }
paste = "^1.0"

[features]
default = []
